@@ -1,7 +1,8 @@
 package edu.com.beginnings.map.red;
 
 
-import edu.com.beginnings.dto.red.*;
+import edu.com.beginnings.dto.record.red.AlumnoGlobalRequestDTO;
+import edu.com.beginnings.dto.record.red.AlumnoGlobalResponseDTO;
 import edu.com.beginnings.model.red.Alumno;
 import edu.com.beginnings.model.red.AlumnoCurso;
 import edu.com.beginnings.model.red.Curso;
@@ -11,24 +12,33 @@ import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface AlumnoMapper {
 
-    //
-    // Convertir Alumno a DTO de respuesta
-    @Mapping(target = "cursos", source = "alumnoCursos", qualifiedByName = "mapCursos")
-    @Mapping(target = "talleres", source = "talleres")
-    AlumnoResponseDTO toAlumnoResponseDTO(Alumno alumno);
+    //request
+    Alumno toAlumno(AlumnoGlobalRequestDTO alumnoGlobalRequestDTO);
 
+    //response
+    @Mapping(target = "cursos",source = "alumnoCursos",qualifiedByName = "mapCursos")
+    @Mapping(target = "talleres",source = "talleres",qualifiedByName = "mapTalleres")
+    AlumnoGlobalResponseDTO toAlumnoGlobalResponseDTO(Alumno alumno);
 
-
-    // Convertir lista de AlumnoCurso a lista de CursoDTO
     @Named("mapCursos")
-    default List<CursoDTO> mapCursos(List<AlumnoCurso> alumnoCursos) {
-        if (alumnoCursos == null) return List.of();
-        return alumnoCursos.stream()
-                .map(ac -> new CursoDTO(ac.getCurso().getId(), ac.getCurso().getNombre()))
-                .toList();
+    default List<String> mapCursos(List<AlumnoCurso> alumnoCursos){
+        return alumnoCursos
+                .stream()
+                .map(ac -> ac.getCurso().getNombre())
+                .collect(Collectors.toList());
     }
+
+    @Named("mapTalleres")
+    default List<String> mapTalleres(List<Taller> talleres){
+        return talleres
+                .stream()
+                .map(taller -> taller.getNombre())
+                .collect(Collectors.toList());
+    }
+
 }
